# Compilers-Project

./: Automata.cpp  Automata.h  CMakeLists.txt  FileParser.cpp  FileParser.h  Makefile  NfaBuilder.cpp  NfaBuilder.h  Parsing_table.txt  README.md  State.cpp  State.h  Transition_table.txt  example_grammer.txt  example_grammer_LL1.txt  example_program_2.txt  example_rules.txt  main.cpp
Flex/: example.lex  lex.yy.c
docs/: LexicalAnalyzerGen.md
src/: Automata.cpp  Automata.h  DFAConstructor.cpp  DFAConstructor.h  FileParserTest.cpp  NfaBuilder.cpp  NfaBuilder.h  NfaToDfaTest.cpp  ProgramAnalyzer.cpp  ProgramAnalyzer.h  Scanner.cpp  Scanner.h  State.cpp  State.h  main.cpp  test_nfabuilder.cpp
src/Parser/: CFGFileReader.cpp  CFGFileReader.h  Grammar.cpp  Grammar.h  GrammerFileReader.cpp  GrammerFileReader.h  Lexer.h  Parser.cpp  Parser.h  ParsingTable.cpp  ParsingTable.h  draft.cpp  syntax_parsing.h
src/RulesParsing/: FileParser.cpp  FileParser.h
src/lexical_analysis/: Automata.cpp  Automata.h  ProgramAnalyzer.cpp  ProgramAnalyzer.h  Scanner.cpp  Scanner.h  State.cpp  State.h  lexical_analysis.h
src/lexical_analysis/automata_construction/: DFAConstructor.cpp  DFAConstructor.h  NfaBuilder.cpp  NfaBuilder.h
src/tests/: NfaToDfaTest.cpp  test_nfabuilder.cpp  test_scanner.cpp
